packages/coffee.chealt.com/src/components/taste-notes/taste-note-groups/wheel.css
coffee-taste-note-wheel {
  position: relative;

  .random-coffee-container {
    transform: rotate3d(0, 1, 0, 0.25turn);
  }
}

.wheel {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--gap);
  position: relative;
  overflow: hidden;

  .arrow {
    position: absolute;
    top: 8px;
  }

  .segment {
    cursor: pointer;
    transition: opacity 0.2s ease;
    shape-rendering: crispEdges;
  }

  .segment:hover {
    opacity: 0.8;
  }

  .segment-label {
    pointer-events: none;
    font-size: 0.7rem;
    font-family: monospace;
    fill: var(--color-text);
    text-transform: capitalize;
    letter-spacing: 2px;
  }

  .button-container {
    position: absolute;
    inset: 0;
    display: flex;
    align-self: center;
    justify-content: center;

    button {
      border-radius: 50%;
      background-color: transparent;
      color: var(--color-text--primary);
      width: 70px;
      height: 70px;
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

.random-coffee-container {
  position: absolute;
  inset: 0;

  button {
    position: absolute;
    top: var(--gap);
    right: var(--gap);
    width: auto;

    &:active {
      top: var(--gap);
    }
  }

  .coffee {
    overflow: hidden;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    border-radius: var(--border-radius);

    a {
      display: flex;
    }

    img {
      width: 100%;
    }
  }
}

